# robby_x

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: auto-format.yml  ci.yml  hil-nightly.yml
config/: camjam.yaml
deploy/camjam/: provision_camjam.sh
deploy/camjam/config/: pins.yaml
deploy/camjam/scripts/: check_services.sh  diagnostics.sh  tls_renew.sh
deploy/camjam/systemd/: camjam-camera.service  camjam-control.service  camjam-diagnostics.service  camjam-tls-renew.service  camjam-tls-renew.timer
docs/: development-guidelines.md  requirements.md
docs/adr/: 0001-tech-stack.md
docs/api/: control-service.yaml
docs/architecture/: control-services.mmd  data-flow.mmd  hardware-abstraction.mmd  ui-architecture.mmd  video-pipeline.mmd
docs/deployment/: camjam.md
docs/diagnostics/: camjam-logging.md  ui-diagnostics.md
docs/hardware/: camjam-motors.md  camjam-sensors.md
docs/operations/: camjam-maintenance.md
docs/simulation/: README.md  camjam-scenarios.md
docs/testing/: camjam-strategy.md
docs/ui/: README.md  build-instructions.md  camjam-ui-requirements.md  styling-guide.md
docs/video/: pantilt-streaming.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.base.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DriveControl.tsx  PanTiltControl.tsx  TelemetryPanel.tsx
frontend/src/context/: ControlContext.tsx  ControlProvider.tsx
frontend/tests/: accessibility.test.tsx  driveControl.test.tsx  pantiltStream.test.tsx  responsiveness.test.tsx  setup.ts  telemetry.test.tsx
scripts/: __init__.py
scripts/hil/: __init__.py  common.py  run_motor_characterisation.py  run_pantilt_alignment.py  run_sensor_validation.py  run_streaming_validation.py
src/services/: __init__.py
src/simulation/: __init__.py
tests/api/: test_command_queue_unit.py  test_control_service_camjam.py  test_control_service_config.py  test_rate_limiter_unit.py
tests/deploy/: test_camjam_provisioning.py
tests/hardware/: test_camjam_factories.py
tests/services/: test_camjam_diagnostics.py
tests/simulation/: test_camjam_sim.py
(+25 files in other folders)
